--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,27 +4,26 @@ on:
       - partOne-changeUI
 
 jobs:
-  ftp-deploy:
+  deploy:
     name: Deploy
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
 
-      # SCP Deploy step for the main directory
-      - name: SCP Deploy to public_html
-        uses: appleboy/scp-action@master
+      - name: FTP Deploy to public_html
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         with:
-          host: ${{ secrets.FTP_SERVER }}
+          server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: "."
-          target: "/public_html/"
-          strip_components: 1
+          password: ${{ secrets.FTP_PASSWORD }}
+          server-dir: /public_html/
           exclude: |
-            public/**
+            /public/**
            .env
-            public_html/index.php
+            /public_html/index.php
+
+      # Repeat similar steps for other directories like js, css, etc., adjusting the server-dir and local-dir paths accordingly.
 
       # FTP Deploy step for the public/js directory
       - name: FTP Deploy JS to public_html/js
