--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,15 +4,16 @@ on:
       - partOne-changeUI
 
 jobs:
-  deploy:
+  ftp-deploy:
     name: Deploy
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
 
+      # FTP Deploy step for the main directory
       - name: FTP Deploy to public_html
-        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+        uses: SamKirkland/FTP-Deploy-Action@latest
         with:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
@@ -20,10 +21,8 @@ jobs:
           server-dir: /public_html/
           exclude: |
             /public/**
-           .env
+            .env
             /public_html/index.php
-
-      # Repeat similar steps for other directories like js, css, etc., adjusting the server-dir and local-dir paths accordingly.
 
       # FTP Deploy step for the public/js directory
       - name: FTP Deploy JS to public_html/js
