--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,8 @@ jobs:
             /public/**
             .env
             /public_html/index.php
+          protocol: ftps # Specify FTPS explicitly
+          timeout: 120000 # Increase timeout to 120 seconds
 
       # FTP Deploy step for the public/js directory
       - name: FTP Deploy JS to public_html/js
